examples/fail/path_1_frag_0_pre_parent.xyz
10

C	-0.01782 1.46436 0.01009
C	0.01834 -1.19181 -0.00451
H	-0.2972573429237645 -0.7987955580833002 0.6794584081930937
H	-0.2365705549662574 0.9431966529446217 0.49245755796517127
H	0.09135560616223354 0.686345839974397 0.8418334402793527
H	0.8058899012047138 -0.7177165041015986 -0.1533769437576482
H	0.8290181893199972 0.4572242446352647 0.5401618571264591
H	-0.8794752849675957 -0.6439120739085141 0.0006813266489636326
H	0.5997203974465279 0.35106164926684996 0.8397566095605428
H	-0.8063033628244349 0.08814599607233177 -0.7281518869538307
